# GuiCode

./: .gitmodules  CMakeLists.txt  README.md
include/GuiCode/: Gui.hpp  RightClickMenu.hpp  pch.hpp
include/GuiCode/data/: Vec.hpp
include/GuiCode/platform/windows/: WindowsWindow.hpp
include/GuiCode/ui/: Clipboard.hpp  Dragging.hpp  RightClickMenu.hpp
include/GuiCode/ui/Views/: Arrangement.hpp  View.hpp
include/GuiCode/ui/components/: Component.hpp  Container.hpp  Frame.hpp  Layout.hpp  LayoutManager.hpp
include/GuiCode/ui/components/buttons/: Button.hpp  ButtonGraphics.hpp  ButtonType.hpp  DropDown.hpp
include/GuiCode/ui/events/: Event.hpp  EventListener.hpp
include/GuiCode/ui/graphics/: Collection.hpp  Command.hpp  Graphics.hpp  Shader.hpp  Theme.hpp
include/GuiCode/ui/window/: ComponentFrame.hpp  Frame.hpp  MenuFrame.hpp  SmallFrame.hpp  Window.hpp  WindowBase.hpp
libs/: CMakeLists.txt
libs/glad/: glad.cpp  glad.hpp
resources/: gcresource.rc  resource.h  resource.rc
shaders/: EllipseFragment.shader  EllipseVertex.shader  QuadFragment.shader  QuadVertex.shader  TextFragment.shader  TexturedQuadFragment.shader  TexturedQuadVertex.shader
source/GuiCode/platform/windows/: WindowsWindow.cpp
source/GuiCode/ui/Views/: Arrangement.cpp  View.cpp
source/GuiCode/ui/components/: Component.cpp  Container.cpp  Frame.cpp  LayoutManager.cpp
source/GuiCode/ui/graphics/: Collection.cpp  Graphics.cpp  Shader.cpp
source/GuiCode/ui/window/: ComponentFrame.cpp  Frame.cpp  MenuFrame.cpp  SmallFrame.cpp
themes/: dark  epic  light  standard
(+47 files in other folders)
